{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 17,
  "lineage": "32aea625-16b7-5cb8-1df7-338526db03a0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264305464:internet-gateway/igw-0951d85b006a19157",
            "id": "igw-0951d85b006a19157",
            "owner_id": "058264305464",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-igw"
            },
            "tags_all": {
              "Name": "eks-igw"
            },
            "vpc_id": "vpc-0edda1f8376cf2ea7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "eks_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0951d85b006a19157",
            "id": "r-rtb-016d4cf508c3c721d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-016d4cf508c3c721d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264305464",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-016d4cf508c3c721d"
          },
          "dependencies": [
            "aws_internet_gateway.eks_igw",
            "aws_route_table.eks_rt",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264305464:route-table/rtb-016d4cf508c3c721d",
            "id": "rtb-016d4cf508c3c721d",
            "owner_id": "058264305464",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "eks-rt"
            },
            "tags_all": {
              "Name": "eks-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0edda1f8376cf2ea7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264305464",
            "id": "rtb-016d4cf508c3c721d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bde16d8adde89bbf",
            "region": "us-east-1",
            "route_table_id": "rtb-016d4cf508c3c721d",
            "subnet_id": "subnet-02c3a2bce66f51379"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet1",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04c9704d2e072bf57",
            "region": "us-east-1",
            "route_table_id": "rtb-016d4cf508c3c721d",
            "subnet_id": "subnet-05e16c7a4fe6ceb80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.eks_rt",
            "aws_subnet.eks_subnet2",
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264305464:subnet/subnet-02c3a2bce66f51379",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c3a2bce66f51379",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264305464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-subnet1"
            },
            "tags_all": {
              "Name": "eks-subnet1"
            },
            "vpc_id": "vpc-0edda1f8376cf2ea7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264305464",
            "id": "subnet-02c3a2bce66f51379",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264305464:subnet/subnet-05e16c7a4fe6ceb80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e16c7a4fe6ceb80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "058264305464",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-subnet2"
            },
            "tags_all": {
              "Name": "eks-subnet2"
            },
            "vpc_id": "vpc-0edda1f8376cf2ea7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "058264305464",
            "id": "subnet-05e16c7a4fe6ceb80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.eks_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:058264305464:vpc/vpc-0edda1f8376cf2ea7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00cb5cb3ba440596b",
            "default_route_table_id": "rtb-0853a0a3231c7af9e",
            "default_security_group_id": "sg-025c081adbd154363",
            "dhcp_options_id": "dopt-03aa84a60e0c8a9f8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0edda1f8376cf2ea7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0853a0a3231c7af9e",
            "owner_id": "058264305464",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-vpc"
            },
            "tags_all": {
              "Name": "eks-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}